[package]
name = "shopify_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.21.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
getrandom = { version = "0.2.8", features = ["js"] }
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
regex = { version = "1.7.1", default-features = false, features = [
    "std",
    "perf",
] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
time = { version = "0.3.20", features = ["formatting", "wasm-bindgen"] }
worker = { git = "https://github.com/FlareLine/workers-rs", branch = "d1-support", features = [
    "d1",
] }
